# checkers

./: CMakeLists.txt  board.cpp  checkers.cpp  checkers.h  log.cpp  main.cpp  move.cpp  render.cpp  stdio_player.cpp  tcp_player.cpp
